--- a/src/appsettings.json
+++ b/src/appsettings.json
@@ -4,6 +4,11 @@
     "ConnectionString": "",
     "DatabaseName": "BooksCollection"
   },
+  "UserDatabaseSettings": {
+    "UserCollectionName": "Users",
+    "UserConnectionString": "",
+    "UserDatabaseName": "Users"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
