updated dockerfile, removed unused folder and files updated appsettings and startup

--- a/src/appsettings.json
+++ b/src/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "SSLEncryptedPassword": "zxcvb",
+  "SiteSSLCertificatePath": "/etc/ssl/certs/privkey.pem",
+
   "BookstoreDatabaseSettings": {
     "BooksCollectionName": "Books",
     "ConnectionString": "",
