Update application to .NET6 and added .NET6 features, implicit usings, unified program.cs and statup.cs, top level statements, nullable reference types

--- a/src/appsettings.json
+++ b/src/appsettings.json
@@ -4,7 +4,7 @@
 
   "BookstoreDatabaseSettings": {
     "BooksCollectionName": "Books",
-    "ConnectionString": "",
+    "ConnectionString": "ConnectionStringHERE",
     "DatabaseName": "BooksCollection"
   },
   "UserDatabaseSettings": {
